[gd_scene load_steps=13 format=3 uid="uid://bnkpth8xrfmbe"]

[ext_resource type="Script" path="res://scenes/players/player_3.gd" id="1_yxg1t"]
[ext_resource type="Texture2D" uid="uid://bm66lvioc6l6s" path="res://assets/PNG/Blue/characterBlue (7).png" id="2_dbas7"]
[ext_resource type="Script" path="res://scripts/states/StateMachine.gd" id="3_5j1fb"]
[ext_resource type="Texture2D" uid="uid://rxkmcvs6daby" path="res://assets/Spritesheet/sheet_charactersEquipment/characterBlue (11).tres" id="3_dy68n"]
[ext_resource type="Script" path="res://scripts/states/FindBall.gd" id="5_6if43"]
[ext_resource type="Script" path="res://scripts/states/Wandering.gd" id="5_xjqrm"]
[ext_resource type="Script" path="res://scripts/states/Running.gd" id="6_nse8w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_olp4h"]
size = Vector2(44, 35)

[sub_resource type="Animation" id="Animation_uuo2k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.16057]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_87mvv"]
resource_name = "base"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RightHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.0334333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.488692, 0.247519, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("LeftHand:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.16057, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tux4e"]
_data = {
"RESET": SubResource("Animation_uuo2k"),
"base": SubResource("Animation_87mvv")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_74dlg"]
radius = 231.225

[node name="Player3" type="CharacterBody2D"]
z_index = 5
collision_mask = 3
script = ExtResource("1_yxg1t")
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 5)
shape = SubResource("RectangleShape2D_olp4h")

[node name="Body" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_dbas7")

[node name="RightHand" type="Sprite2D" parent="."]
position = Vector2(8, 11)
rotation = 0.16057
texture = ExtResource("3_dy68n")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tux4e")
}
autoplay = "base"

[node name="LeftHand" type="Sprite2D" parent="."]
position = Vector2(8, -10)
texture = ExtResource("3_dy68n")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PathLine" type="Line2D" parent="."]
width = 2.0
default_color = Color(0, 1, 1, 1)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_5j1fb")
initial_state = NodePath("Running")

[node name="Running" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_nse8w")
player = NodePath("../..")

[node name="FindBall" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_6if43")
player = NodePath("../..")

[node name="Wandering" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_xjqrm")
player = NodePath("../..")

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
enabled = false

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_74dlg")
debug_color = Color(0, 0.572643, 0.835432, 0.42)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
